fieldx/tests/uncompilable/1.78+sync/incompat_args.stderr
error: Conflicting arguments 'lazy', 'optional' from group 'field mode' cannot be used at the same time
 --> tests/uncompilable/incompat_args.rs
  |
  | #[fxstruct(lazy, optional)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `fxstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Argument 'lazy' is located here
 --> tests/uncompilable/incompat_args.rs
  |
  | #[fxstruct(lazy, optional)]
  |            ^^^^

error: Argument 'optional' is located here
 --> tests/uncompilable/incompat_args.rs
  |
  | #[fxstruct(lazy, optional)]
  |                  ^^^^^^^^
